# textile

./: .gitignore  .gitreview  Makefile.am  NOTICE  README.md  configure.ac  version-gen
lib/: .gitignore  Makefile.am  hello.c  hello.h  textile.c  textile.h
src/: .gitignore  Makefile.am  main.c
test/: .gitignore  Makefile.am  test.cc
test/data/AllMergeTypes/: base  golden  ours  theirs
test/data/OnlyDeletes/: base  golden  theirs
test/data/TrickyMerge/: base  golden  ours  theirs
